# supDB

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
mcp-server/: .env.example  config.py  pyproject.toml  requirements.txt  server.py
mcp-server/rag/: schema_indexer.py
mcp-server/tests/: test_guardrails.py  test_rag.py
mcp-server/tools/: mongo.py  postgres.py
seed/: mongo_seed.js  postgres_seed.sql
